src/styles.scss
/* You can add global styles to this file, and also import other style files */
//import url
@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css");
@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Roboto:wght@200;400;600&display=swap");
/// customized bootstrap
@import './assets/scss/customizedBootstrap/bootstrap.scss';

// custom styling

// global

html,
body {
  height: 100%;
}

body {
  margin: 0;
  font-family: Roboto, "Helvetica Neue", sans-serif;
  background-color: $hi-grey;
  color: $hi-dark;
}

.w-40 {
  width: 40%;
}

.text-hi-dark {
  color: $hi-dark !important;
}

.text-hi-grey {
  color: darken($color: $hi-dark-grey, $amount: 20);
}

.text-hi-dark-grey {
  color: darken($color: $hi-dark-grey, $amount: 40);
}

.bg-hi-light-grey {
  background-color: lighten($color: $hi-dark-grey, $amount: 10.8);
}

.bg-hi-grey {
  background-color: lighten($color: $hi-dark-grey, $amount: 10);
}

.bg-hi-dark-grey {
  background-color: $hi-dark-grey;
}

.no-bg-hover:hover {
  background-color: transparent;
}

.text-hover:hover {
  color: $primary !important;
}

.primary-bg-hover:hover {
  background-color: rgba($primary, .075) !important;
  cursor: pointer;
}

.dark-bg-hover:hover {
  background-color: rgba($black, .075) !important;
  cursor: pointer;
}

.hide {
  display: none !important;
}

.show {
  display: block !important;
}

.cdk-overlay-container {
  z-index: 1051 !important;
}

.curs-ptr {
  cursor: pointer;
}

.input-btn {
  padding: 0 !important;
  border-radius: 50%;
  width: 18px !important;
  height: 18px !important;

  i {
    vertical-align: top !important;
  }
}

// breadcrumb
.breadcrumb {
  .breadcrumb-item {
    font-size: 14px;
  }
}

// angular bootstrap modal
button[aria-label="Close"]:focus {
  outline: none;
}

// before pseudo element
.no-before::before {
  display: none !important;
}


// material
.input-bottom-padding-0 {
  .mat-form-field-wrapper {
    padding-bottom: 0;
  }
}

mat-checkbox {
  label {
    margin-bottom: 0 !important;
  }
}

.page-spinner {
  padding-top: 25vh;
  min-height: 50vh;

  mat-spinner {
    height: 60px !important;
    width: 60px !important;

    svg {
      height: 60px !important;
      width: 60px !important;

      circle {
        stroke-width: 2% !important;
      }
    }
  }
}

.btn-spinner {
  display: inline-block;
  padding: 1px;
  vertical-align: middle;

  mat-spinner {
    height: 14px !important;
    width: 14px !important;
    margin-bottom: 3px;

    svg {
      height: 14px !important;
      width: 14px !important;

      circle {
        stroke: white !important;
        stroke-width: 18% !important;
      }
    }
  }
}

.div-spinner {
  padding-top: 30px;
  min-height: 90px;

  mat-spinner {
    height: 40px !important;
    width: 40px !important;

    svg {
      height: 40px !important;
      width: 40px !important;

      circle {
        stroke-width: 2% !important;
      }
    }
  }
}

.align-spin-top {
  .btn-spinner {
    vertical-align: top;
  }
}

.mat-checkbox-layout {
  white-space: normal !important;
}

.mat-tab-label-active {
  opacity: 1 !important;
}

.card-header {
  .mat-tab-label-active {
    background-color: white;
    border-top-left-radius: 0.8rem;
    border-top-right-radius: 0.8rem;
  }
}

.mat-tab-group.mat-primary .mat-ink-bar,
.mat-tab-nav-bar.mat-primary .mat-ink-bar {
  background-color: $primary !important;
}

.mat-form-field-appearance-legacy .mat-form-field-wrapper {
  padding-bottom: 0 !important;
}

.mat-select-panel {
  border-radius: 0.8rem !important;
  padding-top: 0.5rem !important;
  padding-bottom: 0.5rem !important;
  box-shadow: none !important;
  border: 1px $hi-dark-grey solid !important;
  margin-top: 45px !important;
}

.mat-option {
  height: auto !important;
  line-height: 1.5 !important;
  font-size: 1rem !important;
  padding: 0.25rem 1.5rem !important;
}

.mat-option:hover:not(.mat-option.mat-active) {
  background-color: $hi-dark-grey !important;
  color: darken($color: $hi-dark, $amount: 15) !important;
}

.mat-option.mat-active {
  color: white !important;
  background-color: lighten($color: $primary, $amount: 8) !important;
}

.custom-material-select {
  .mat-form-field-underline {
    display: none;
  }

  .mat-form-field-infix {
    border-top: 0 !important;
  }

  .mat-form-field-appearance-outline .mat-form-field-prefix,
  .mat-form-field-appearance-outline .mat-form-field-suffix {
    top: -0.25em !important;
  }
}

.custom-mat-input {
  border-radius: 0.8rem !important;

  input {
    margin-left: 1rem;
    font-size: 1rem;
  }

  .mat-form-field-outline-start {
    border-radius: 0.8rem 0 0 0.8rem !important;
    min-width: 13px !important;
  }

  .mat-form-field-outline-end {
    border-radius: 0 0.8rem 0.8rem 0 !important;
  }

  .mat-form-field-prefix,
  .mat-form-field-suffix {
    top: 2px !important;
  }

  .mat-form-field-prefix {
    margin-right: 5px;
  }

  .mat-form-field-wrapper {
    padding: 0 !important;
    margin: 0 !important;
    width: 100%;
  }

  .mat-form-field-infix {
    padding-bottom: 0.7rem !important;
    padding-top: 1rem !important;
    border-top: 0 !important;
  }

  .mat-form-field-label-wrapper {
    padding: 0 !important;
  }

  mat-chip {
    margin-top: 0 !important;
    margin-bottom: 0 !important;
    min-height: 25px !important;
    // background-color: $primary !important;

    .mat-chip-remove {
      width: auto !important;
      height: auto !important
    }
  }
}

.sp-mat-input {
  .mat-form-field-suffix {
    top: 0.09rem !important;
  }
}
/* ... */

